syntax = "proto3";
package seedproto;
option go_package = "oni-view/seedproto";

message GeyserProto {
  string id = 1;
  int32 x = 2;
  int32 y = 3;
  double activeCycles = 4;
  double avgEmitRate = 5;
  double dormancyCycles = 6;
  double emitRate = 7;
  double eruptionTime = 8;
  double idleTime = 9;
}

message PointOfInterestProto {
  string id = 1;
  int32 x = 2;
  int32 y = 3;
}

message AsteroidProto {
  string id = 1;
  int32 sizeX = 2;
  int32 sizeY = 3;
  repeated GeyserProto geysers = 4;
  repeated PointOfInterestProto pointsOfInterest = 5;
  string biomePaths = 6;
}

message SeedDataProto {
  repeated AsteroidProto asteroids = 1;
}
